--- a/index.html
+++ b/index.html
@@ -36,16 +36,17 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 
 <script>
+	// tally for cold or allergy symptoms
         var allergy_count = 0;
         var cold_count = 0;
 
-
+	//adds 1 for each allergy symptom
         function allergyAdd(){
             allergy_count = allergy_count + 1;
 		alert(allergy_count);
 
         }
-
+	// adds 1 for each cold symptom
         function coldAdd(){
             cold_count = cold_count + 1;
         }
