add new question
commented js script function
added new question, changed question text

--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
     	<div id="content" class="w3-container">
-        <p>Put Question 1 content here.</p>    
+        <p>Is a runny nose present?</p>    
     	</div>
 </div>
 
@@ -107,7 +107,17 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	</div>
 	
 	<div id="content" class="w3-container">
-		<p>Content of page 2 goes here.</p>
+		<p>Is a fever present?</p>
+	</div>
+</div>	
+	
+<div class="page" id="three">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 3</h1>
+	</div>
+	
+	<div id="content" class="w3-container">
+		<p>Are chills present?</p>
 	</div>
 </div>	
 
