attempt to add buttons
attempted to add buttons

--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
         <p>Is a runny nose present?</p>    
     	</div>
+	<a href="#one" class="w3-btn w3-grey w3-round"> Next </a>
 </div>
 
 <div class="page" id="two">
@@ -109,6 +110,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Is a fever present?</p>
 	</div>
+	<a href="#three" class="w3-btn w3-grey w3-round"> Next </a>
 </div>	
 	
 <div class="page" id="three">
@@ -119,6 +121,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are chills present?</p>
 	</div>
+	<a href="#four" class="w3-btn w3-grey w3-round"> Next </a>
 </div>	
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
