--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
         <p>Is a runny nose present?</p>    
     	</div>
-	<a href="#one" class="w3-btn w3-grey w3-round"> Next </a>
+	<a href="#two" class="w3-btn w3-grey w3-round"> Next </a>
 </div>
 
 <div class="page" id="two">
