--- a/index.html
+++ b/index.html
@@ -99,6 +99,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
         <p>Is a runny nose present?</p>    
     	</div>
+	<!-- redirected button pointer -->
+	
 	<a href="#two" class="w3-btn w3-grey w3-round"> Next </a>
 </div>
 
