--- a/index.html
+++ b/index.html
@@ -101,7 +101,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	</div>
 	<!-- redirected button pointer -->
 	
-	<a href="#two" class="w3-btn w3-grey w3-round"> Next </a>
+	<a href="#two" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#two" class="w3-btn w3-grey w3-round"> No </a>
 </div>
 
 <div class="page" id="two">
@@ -112,7 +113,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Is a fever present?</p>
 	</div>
-	<a href="#three" class="w3-btn w3-grey w3-round"> Next </a>
+	<a href="#three" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#three" class="w3-btn w3-grey w3-round"> No </a>
 </div>	
 	
 <div class="page" id="three">
@@ -123,7 +125,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are chills present?</p>
 	</div>
-	<a href="#four" class="w3-btn w3-grey w3-round"> Next </a>
+	<a href="#four" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#four" class="w3-btn w3-grey w3-round"> No </a>
 </div>	
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
