--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ THIS CODE SHOULD NOT BE USED TO DIAGNOSE ANY KIND OF MEDICAL CONDITION.
  
 Authors in chronological order of contribution:
 Tim Riedel
-Author 2
+Eric Quan
  
 Further Information:
 http://cns.utexas.edu/fri
@@ -17,10 +17,10 @@ Timothy Riedel
 triedel@utexas.edu
  
 Brief Description of Goal of Code:
-blah, blah, blah,
- 
+This app is used as a quiz to differentiate between colds and allergies. 
+
 Known Issues:
-blah, blah, blah, blah
+
 
 https://www.w3schools.com/w3css/default.asp
 https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-file
@@ -102,6 +102,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<!-- redirected button pointer -->
 	
 	<a href="#two" class="w3-btn w3-grey w3-round"> Yes </a>
+	<button onclick="myFunction()">Copy Text</button>
 	<a href="#two" class="w3-btn w3-grey w3-round"> No </a>
 </div>
 
@@ -125,6 +126,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are chills present?</p>
 	</div>
+	
 	<a href="#four" class="w3-btn w3-grey w3-round"> Yes </a>
 	<a href="#four" class="w3-btn w3-grey w3-round"> No </a>
 </div>	
