--- a/index.html
+++ b/index.html
@@ -145,9 +145,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<h1>Results</h1>
 	</div>
 
-<!-- cold denoting question -->
+	<!-- displays results in HTML -->
 	<div id="content" class="w3-container">
-		<p>You got:</p>
+		<a onclick = "displayResults();" class="w3-btn w3-black"> show results </a>
+		<p id = "You got: "></p>
 	</div>
 	
 </div>	
