changed button color

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<!-- displays results in HTML -->
 	<div id="content" class="w3-container">
-		<a onclick = "displayResults();" class="w3-btn w3-black"> show results </a>
+		<a onclick = "displayResults();" class="w3-btn w3-grey w3-round"> show results </a>
 		<p id = "You got: "></p>
 	</div>
 	
