--- a/index.html
+++ b/index.html
@@ -108,8 +108,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	</div>
 	<!-- redirected button pointer -->
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#two" onclick="coldCount" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#two" onclick="allergyCount" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#two" onclick="coldCount()" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#two" onclick="allergyCount()" class="w3-btn w3-grey w3-round"> No </a>
 </div>
 
 <div class="page" id="two">
@@ -122,8 +122,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<p>Is a fever present?</p>
 	</div>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#three" onclick="coldCount" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#three" onclick="allergyCount" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#three" onclick="coldCount()" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#three" onclick="allergyCount()" class="w3-btn w3-grey w3-round"> No </a>
 </div>	
 	
 <div class="page" id="three">
@@ -136,8 +136,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		<p>Are chills present?</p>
 	</div>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#four" onclick="coldCount" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#four" onclick="allergyCount" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#four" onclick="coldCount()" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#four" onclick="allergyCount()" class="w3-btn w3-grey w3-round"> No </a>
 </div>	
 	
 <div class="page" id="four">
