--- a/index.html
+++ b/index.html
@@ -55,8 +55,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	function displayResults(){
 		var coldPercent = cold_count/3 * 100
 		var allergyPercent = allergy_count/3 * 100
-		var resultTxt = document.getElementById("results");
-		resultTxt.innerHTML = "Allergy Probability = " allergyPercent + "%" + "<br> Cold Probability = " coldPercent + "%";
+		var resultText = document.getElementById("results");
+		resultText.innerHTML = "Allergy Probability = " allergyPercent + "%" + "<br> Cold Probability = " coldPercent + "%";
 
   </script>
 
@@ -144,6 +144,21 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 </div>	
 	
 <div class="page" id="four">
+	<div class="w3-container w3-flat-carrot">
+		<h1>Question 4</h1>
+	</div>
+
+<!-- cold denoting question -->
+	<div id="content" class="w3-container">
+		<p>Are chills present?</p>
+	<!-- adds 1 to coldCount or allergyCount -->
+	<a href="#four" onclick="coldCount()" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#four" onclick="allergyCount()" class="w3-btn w3-grey w3-round"> No </a>
+	</div>
+	
+</div>	
+	
+<div class="page" id="five">
 	<div class="w3-container w3-flat-carrot">
 		<h1>Results</h1>
 	</div>
