--- a/index.html
+++ b/index.html
@@ -150,10 +150,10 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 <!-- cold denoting question -->
 	<div id="content" class="w3-container">
-		<p>Are chills present?</p>
+		<p>Are aches present?</p>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#four" onclick="coldCount()" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#four" onclick="allergyCount()" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#five" onclick="coldCount()" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#five" onclick="allergyCount()" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
 	
 </div>	
