--- a/index.html
+++ b/index.html
@@ -165,8 +165,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 
 	<!-- displays results in HTML -->
 	<div id="content" class="w3-container">
-		<p> "You got: "></p>
-		<a onclick = "displayResults();" class="w3-btn w3-grey w3-round"> show results </a>
+		<p>You got:</p>
+		<a onclick = "displayResults();" class="w3-btn w3-grey w3-round"> results </a>
 		<p id = "results"></p>
 		
 	</div>
