--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
     	<div id="content" class="w3-container">
         <p>Is a runny nose present?</p>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#two" onclick="coldAdd()" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#two" onclick="allergyAdd()" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#two" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#two" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> No </a>
     	</div>
 	<!-- redirected button pointer -->
 	
@@ -122,8 +122,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Is a fever present?</p>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#three" onclick="coldAdd()" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#three" onclick="allergyAdd()" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#three" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#three" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
 	
 </div>	
@@ -137,8 +137,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are chills present?</p>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#four" onclick="coldAdd()" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#four" onclick="allergyAdd()" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#four" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#four" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
 	
 </div>	
@@ -152,8 +152,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	<div id="content" class="w3-container">
 		<p>Are aches present?</p>
 	<!-- adds 1 to coldCount or allergyCount -->
-	<a href="#five" onclick="coldAdd()" class="w3-btn w3-grey w3-round"> Yes </a>
-	<a href="#five" onclick="allergyAdd()" class="w3-btn w3-grey w3-round"> No </a>
+	<a href="#five" onclick="coldAdd();" class="w3-btn w3-grey w3-round"> Yes </a>
+	<a href="#five" onclick="allergyAdd();" class="w3-btn w3-grey w3-round"> No </a>
 	</div>
 	
 </div>	
