--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 		var coldPercent = cold_count/4 * 100
 		var allergyPercent = allergy_count/4 * 100
 		var resultText = document.getElementById("results");
-		resultText.innerHTML = "Allergy Probability = " allergyPercent + "%" + "<br> Cold Probability = " coldPercent + "%";
+		resultText.innerHTML = "Allergy Probability = " + allergyPercent + "%" + "<br> Cold Probability = " + coldPercent + "%";
 	};
   </script>
 
