--- a/index.html
+++ b/index.html
@@ -215,6 +215,8 @@ https://stackoverflow.com/questions/8211128/multiple-distinct-pages-in-one-html-
 	
 </div>	
 	
+	
+<!-- a similar app structure could differentiate between hunger and dehydration -->
 
 <footer class="w3-bottom w3-container w3-flat-carrot">
 	<p>DIY!</p>
